Avoid initializing classes that use experimental features when panama backend is not in use.